# ai-playground

./: cardiff_eda_bench.ipynb  cardiff_train.py  cardiff_train_bench.py  debug_history_coder.txt  imdb_train.py  main.py  pyproject.toml  train.py
logs/: analyst  coder  namer  summary
logs/tweet_topic_single-bert-base-cased-base-(2024-02-27)-(14:21:32)/: events.out.tfevents.1709036505.akiyama-sb.765537.0
logs/tweet_topic_single-bert-base-cased-base-(2024-02-27)-(21:24:28)/: events.out.tfevents.1709061886.akiyama-sb.1056757.0
logs/tweet_topic_single-bert-base-cased-base-(2024-02-27)-(21:41:48)/: events.out.tfevents.1709062922.akiyama-sb.1069547.0
logs/tweet_topic_single-bert-base-cased-base-adamw_bnb_8bit-(2024-02-27)-(22:28:29)/: events.out.tfevents.1709065724.akiyama-sb.1104685.0
logs/tweet_topic_single-bert-base-cased-base-adamw_bnb_8bit-batchsize-4-(2024-02-28)-(06:51:31)/: events.out.tfevents.1709095911.akiyama-sb.1484781.0
logs/tweet_topic_single-bert-base-cased-base-adamw_bnb_8bit-batchsize-64-(2024-02-28)-(00:12:11)/: events.out.tfevents.1709071945.akiyama-sb.1125233.4  memory_usage.txt
logs/tweet_topic_single-bert-base-cased-base-adamw_bnb_8bit-batchsize-8-(2024-02-27)-(23:35:08)/: events.out.tfevents.1709069721.akiyama-sb.1125233.2
logs/tweet_topic_single-bert-base-cased-base-adamw_torch-(2024-02-28)-(06:38:09)/: events.out.tfevents.1709095109.akiyama-sb.1474595.0
src/: main.py
src/codegen/: agents.py  cached_dialog.md  liked.md  (+7 more)
train_config/: config.py
train_utils/: __init__.py  dataset.py  metrics.py
utils/: __init__.py  gpu_util.py
(+157 files in other folders)
